--- a/SO/Protokoll/SO_Protokoll_diskussion.tex
+++ b/SO/Protokoll/SO_Protokoll_diskussion.tex
@@ -1,1 +1,5 @@
 \section{Diskussion und Zusammenfassung}
+	Im durchgeführten Experiment wurde die Abhängigkeit des Reflexions-, Trans\-mis\-sions- und Absorptionsvermögens von der Wellenlänge des einfallenden Lichts verschiedener Proben untersucht. Klassische Farbfilter, wie man sie zum Beispiel in der Lichttechnik einsetzt, absorbieren Licht bis zu einer gewissen Grenzwellenlänge und besitzen ein kantenförmiges Spektrum. 
+	%TODO@Christian:Feuerwehrhelm + Metallinterferenzfilter zusammenfassung 
+	Die dabei untersuchte Probe einer fluoreszierenden Farbstoffaufdampfschicht ergab ein kompliziertes Spektrum mit Absorptionsmaxima um die der einzelnen Komponentenmoleküle (Glas, DCM, Alq3). Der einzig lumineszierende Stoff dabei ist Alq3 und dieser kann aufgrund der relativ geringen Anregungsenergie von etwa \unit[3,1]{eV} den Halbleitern zugeordnet werden. Begünstigt man durch geeignete umgebende Materialien die Bildung von Exzitonen (gebundenen Elektronen-Loch-Zuständen), können diese beim Zerfall den Farbstoff anregen und somit gezielt die Aussendung von Fluoreszenzlicht auslösen. Aus diesem Grund trifft man dieses Material sehr häufig in der sogenannten Emitterschicht von organischen Leuchtdioden (OLED) an, die technologisch zum Bau von Handydisplays verwendet werden können.\\
+	Weiterhin wurde durch die gleiche Messung der frequenzabhängige Brechungsindex einer Glasplatte bestimmt, der mit zunehmender Wellenlänge abnimmt. Der mittlere Brechungsindex ergibt sich zu $n = 1,57$, was sehr gut mit der Erwartung für eine Quarzglasplatte übereinstimmt.
