--- a/SO/Protokoll/SO_Protokoll_literatur.tex
+++ b/SO/Protokoll/SO_Protokoll_literatur.tex
@@ -1,1 +1,3 @@
-\section{Quellenverzeichnis}
+\begin{thebibliography}{99}
+\bibitem [01] {dcm} unbekannter Autor. \url{https://de.wikipedia.org/wiki/Dichlormethan}. zuletzt geöffnet: 06.03.16
+\end{thebibliography}
