--- a/SO/Protokoll/SO_Protokoll_experiment.tex
+++ b/SO/Protokoll/SO_Protokoll_experiment.tex
@@ -1,6 +1,8 @@
 \section{Versuchsdurchführung}
 	\subsection{Messung spektraler Transparenz und Reflexion} \label{sec:shimadzu}
-	%TODO: Kurze Beschreibung der Durchführung am SHIMADZU3100 (da reichen ein paar wenige Sätze)
+    	Die Messungen zu Transmissions- und Reflexionsgrad erfolgen Schubweise, da für die verschiedenen Proben unterschiedliche Wellenlängenbereiche interessant sind. Für jeden Bereich muss eine Normierungskurve aufgenommen werden, die feststellt, was $ 100\unit{\%} $ Reflexions- bzw. Transmissionsgrad sind.
+        
+        %TODO: Kurze Beschreibung der Durchführung am SHIMADZU3100 (da reichen ein paar wenige Sätze)
 	
 	\subsection{Lumineszenzspektrometrie}
 	%TODO Kurze Beschreibung der Messung am FLOUROMAX. Besonders  Bragg-Bedingung am Eingangsfilter diskutieren.
