--- a/SO/Protokoll/SO_Protokoll_intro.tex
+++ b/SO/Protokoll/SO_Protokoll_intro.tex
@@ -41,4 +41,14 @@
 		&n(T_{ges}) = \frac{1}{T_{ges}}\left(1 + \sqrt{1 - T_{ges}^2}\right), \label{eq:n_T}\\
 		&n(R_{ges}) = \frac{1}{1 - R_{ges}}\left(1 + \sqrt{1 - (1 - R_{ges})^2}\right) \label{eq:n_R}
 	\end{align}
-	
+\subsection{Aufbau der Versuchsanordnungen}
+    Während des Praktikums werden verschiedene Versuchsaufbauten verwendet, um jeweils den Transmissions- und Reflexionsgrade verschiedener Materialien sowie die Anregungswellenlänge einer organischen, fluoreszierenden Probe zu ermitteln.
+    \subsubsection{Shimadzu 3100}
+        Für die Aufnahme der Reflexions- und Transmissionsgrade werden zwei verschiedene Aufbauten eines Gerätes, dem Shimadzu 3100, verwendet. Dieses Gerät erzeugt mithilfe einer Halogen- und einer Deuteriumlampe Licht verschiedener Wellenlängen, wobei die einzelnen Wellenlängen mithilfe optischer Gitter anstelle von Prismen realisiert werden. Im Gegensatz zur Verwendung eines Prismas hängt die Beugung über das Gitter nicht direkt von der Wellenlänge ab und es entstehen auch weniger Unsicherheiten aufgrund der Unabhängigkeit von der Brechzahl. In Abbildung \ref{aufb:transmiss} ist der Transmissionsaufbau zu sehen. 
+        \textbf{Anordnung zur Messung der Transmission}
+            \begin{figure}
+                \includegraphics[scale=0.15]{pic/transmiss_aufbau.png}
+                \caption{Aufbau zur Transmissionsmessung}
+                \label{aufb:transmiss}
+            \end{figure}
+    \subsubsection{Fluoromax}
