--- a/SO/Protokoll/SO_Protokoll_ausw.tex
+++ b/SO/Protokoll/SO_Protokoll_ausw.tex
@@ -43,16 +43,20 @@
             \caption{Transmissions- und Relfexionsgrade eines Metall-Interferenz-Filters}
             \label{exp:MetInt}
         \end{figure}
-        Abbildung \ref{exp:TMetInt} zeigt die Transmission in Abhängigkeit des Winkels. Dabei bedeutet \textit{gerade} den rechtwinkligen Einfall des Lichtes, \textit{gedreht} bedeutet eine Drehung um ca. $40\unit{°}$ und \textit{schief} bzw. \textit{schiefer} bedeuten eine Drehung von ungefähr $60\unit{°}$. Abbildung \ref{exp:TMetInt} zeigt eine Abhängigkeit der Wellenlänge des transmittierten Lichtes vom Einfallswinkel. Alle anderen Komponenten des Lichts werden entweder absorbiert oder reflektiert. Diese Beobachtung ist wiederum mit der Bragg-Bedingung erklärbar. Durch die Bedampfung des Trägers mit einer Metallschicht, ergibt sich ein Kristallgitter, für welches die Gleichungen \ref{bragg1} bzw. \ref{eq:gitter} gelten. Ändert man nun den Einfallswinkel unter Konstanz der Ordnung und der Gitter-Konstanten, ändert sich entsprechend die Wellenlänge des transmittierten Lichtes.
+        Abbildung \ref{exp:TMetInt} zeigt die Transmission in Abhängigkeit des Winkels. Dabei bedeutet \textit{gerade} den rechtwinkligen Einfall des Lichtes, \textit{gedreht} bedeutet eine Drehung um ca. $40\unit{°}$ und \textit{schief} bzw. \textit{schiefer} bedeuten eine Drehung von ungefähr $60\unit{°}$. Abbildung \ref{exp:TMetInt} zeigt eine Abhängigkeit der Wellenlänge des transmittierten Lichtes vom Einfallswinkel. Alle anderen Komponenten des Lichts werden entweder absorbiert oder reflektiert. Diese Beobachtung ist wiederum mit der Bragg-Bedingung erklärbar. Durch die Bedampfung des Trägers mit einer Metallschicht, ergibt sich ein Kristallgitter, für welches die Gleichungen \ref{bragg1} bzw. \ref{eq:gitter} gelten. Ändert man nun den Einfallswinkel unter Konstanz der Ordnung, ändert sich entsprechend die Wellenlänge des transmittierten Lichtes.
         Ein ähnlicher Gedanke erklärt auch die Kurve des Reflexionsgrades der metallenen Seite. Man kann deutlich wiederkehrende Minima erkennen, deren Abstände sich nahezu verdoppeln. Aus der Bragg-Bedingung könnte sich damit das nächste Minimum bei $840\unit{nm}$ befinden.
-        Die grüne Seite des Metall-Interferenz-Filters reflektiert erwartungsgemäß vor allem grünes Licht. Die beiden Peaks entsprechen $525\unit{nm} \text{ und } 575\unit{nm}$
+        Die grüne Seite des Metall-Interferenz-Filters reflektiert erwartungsgemäß vor allem grünes Licht. Die beiden Peaks entsprechen \unit[525]{nm} und \unit[575]{nm}.
     \subsubsection{Material des Visieres eines Feuerwehrhelms}
-    \begin{figure}
-        \subfigure[Transmission \label{exp:Tfeuer}]{\includegraphics[scale=.2]{pic/TFeuerwehr.png}}
-        \subfigure[Reflexion an beschichtetem und unbeschichtetem Visierelement\label{exp:Rfeuer}]{\includegraphics[scale=.2]{pic/RFhelmUnbesch.png}}
-        \caption{Transmissions- und Relfexionsspektren eines Feuerwehrhelm-Visiers}
-        \label{exp:feuerwehr}
-    \end{figure}
+        Weiterhin wurde das Material, aus dem das Visier eines Feuerwehrhelms besteht, untersucht. Die Probe hat beschichtete und unbeschichtete Stellen. Transmissions- und Reflexionsgrade sind in Abbildung \ref{exp:feuerwehr} dargestellt.
+        \begin{figure}[htbp]
+            \subfigure[Transmission der beschichteten und unbeschichteten Seiten\label{exp:Tfeuer}]{\includegraphics[scale=.2]{pic/TFeuerwehr.png}}
+            \subfigure[Reflexion an beschichtetem und unbeschichtetem Visierelement\label{exp:Rfeuer}]{\includegraphics[scale=.2]{pic/RFhelmUnbesch.png}}
+            \caption{Transmissions- und Relfexionsspektren eines Feuerwehrhelm-Visiers}
+            \label{exp:feuerwehr}
+        \end{figure}
+        Abbildung \ref{exp:Tfeuer} zeigt drei Messungen. Die \textit{grüne} Linie ist schlicht die Fortsetzung der \textit{Roten} im Infrarotbereich, wobei man am Übergang erkennen kann, dass die Probe etwas verschoben wurde. Die Messung zeigt ein fluktuierendes Muster, welches als eine Art Umhüllende die Kurve der unbeschichteten Seite hat.
+        Um diese Fluktuation zu erklären, kann ebenfalls Gleichung \ref{bragg1} herangezogen werden. Damit sind die Fluktuationen ein Muster konstruktiver Interferenz. Insgesamt lassen die unbeschichtete und die beschichtete Seite wenig Licht transmittieren
+        In Abbildung \ref{exp:Rfeuer} ist die Reflexionsmessung an der unbeschichteten Seite zu sehen. Hieraus kann man im Zusammenhang mit Abb. \ref{exp:Tfeuer} erkennen, dass im Bereich zwischen \unit[350]{nm} und \unit[550]{nm} das meiste Licht absorbiert wird. Danach wird der weitaus größte Anteil von Licht reflektiert. Letzteres ist insbesondere bei hohen Temperaturen erwünscht, damit der Träger des Visiers im Einsatz entsprechend geschützt ist und sich der Helm nicht erhitzt. In \ref{exp:Rfeuer} kann man auch nochmal das Umschalten zwischen den Lampen beobachten. Um \unit[885]{nm} fluktuieren die Messwerte enorm. Ansonsten zeigt die unbeschichtete, nicht bronzene Seite ein schlechteres Reflexionsverhalten als die bronzene.
 	\subsubsection{Farbstoffaufdampfschicht} \label{sec:organisch}
 		Es wurde eine Glasplatte untersucht, auf die eine dünne Schicht eines lumineszierenden organischen Stoffgemisches aufgedampft wurde. Diese Schicht besteht zu 2\% aus Dichlormethan (DCM), einer organischen Substanz, die man häufig als Lösungsmittel für Harze, Fette und Kunststoffe verwendet\cite{dcm}, und zu 18 \% aus Aluminium-tris(8-hydroxychinolin) (Alq3), einer orange fluoreszierenden Komplexverbindung, welche zum Bau von organischen Leuchtdioden (OLED) verwendet wird.  Abbildung \ref{fig:TRA_organisch} zeigt das spektrale Verhalten der Messung in Transmission und Reflexion, sowie das Absorptionsverhalten. Man erkennt, dass die Absorption für Licht im UV-Bereich stark zunimmt, was dem typischen Verhalten einer Glasplatte, auf die das Substrat aufgebracht ist, entspricht (vergleiche Abbildung \ref{fig:R_T_glas}). Man erkennt mehrere Peaks zum einen im Bereich von etwa $\unit[400]{nm}$, welche mit dem Absorptionsverhalten von Alq3 erklärt werden können und in der Umgebung von etwa \unit[500]{nm}, die dem DCM zugeordnet werden können.\\
 		\begin{figure}[htb]
